# internal/video-service/adapters/http/dto.go
@@ -5,7 +5,7 @@ import (
 	"video-service/domain"
 )
 
-type videoResponseBody struct {
+type VideoResponseBody struct {
 	ID          string `json:"id"`
 	PublisherID string `json:"publisherID"`
 	Topic       string `json:"topic"`
@@ -13,8 +13,8 @@ type videoResponseBody struct {
 	CreatedAt   string `json:"createdAt"`
 }
 
-type videosResponseBody struct {
-	Videos []videoResponseBody `json:"videos"`
+type VideosResponseBody struct {
+	Videos []VideoResponseBody `json:"videos"`
 }
 
 type serviceErrorResponse struct {
@@ -27,8 +27,9 @@ type createVideoRequestBody struct {
 	Description string `json:"description" validate:"required,maxDescription"`
 }
 
-func dtoVideo(v domain.Video) videoResponseBody {
-	return videoResponseBody{
+// TODO: make it private
+func DtoVideo(v domain.Video) VideoResponseBody {
+	return VideoResponseBody{
 		ID:          v.ID.String(),
 		PublisherID: v.PublisherID.String(),
 		Topic:       v.Topic,
